--- a/res/layout/item_artist.xml
+++ b/res/layout/item_artist.xml
@@ -33,15 +33,10 @@
 	android:paddingRight="15dip"
 	android:paddingBottom="10dip"
 	>
-
-<!-- 
-	android:paddingLeft="40dip"
-	android:paddingRight="40dip"
-	 -->
 	<TextView
 		android:id="@android:id/text1"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 		android:textAppearance="?android:attr/textAppearanceLarge"
 		android:textStyle="bold"
 		/>
