--- a/res/layout/item_track.xml
+++ b/res/layout/item_track.xml
@@ -44,6 +44,11 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentRight="true"
+		android:lines="1"
+        android:ellipsize="marquee"
+        android:fadingEdge="horizontal"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
 		android:textAppearance="?android:attr/textAppearanceMedium"
 		/>
 		
