--- a/res/layout/act_control.xml
+++ b/res/layout/act_control.xml
@@ -31,7 +31,7 @@
 		android:layout_height="fill_parent"
 		>
 	    
-		<ImageSwitcher
+		<ImageView
 			android:id="@+id/cover"
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent"
