Changes: - Many of the network calls have been moved to background threads resulting in improved responsiveness and the ability to compile the app using higher API levels (this will come in one of the next commits) - ArtistsActivity now has a fast scrolling tab, although this seems to act a bit odd on occasion - Lists are no longer using bold typefaces which allows for more infomation on lines - ControlActivity has new shuffle and repeat buttons, moved from the menu, with icons describing the state in more detail - LibraryActivity will now detect some issues when searching for networks (if wifi is off or there is no network connection) - Some activities have has their menus made in XML, which cleans up the code a bit

--- a/res/layout/act_control.xml
+++ b/res/layout/act_control.xml
@@ -128,43 +128,52 @@
 			>
 	
 			<LinearLayout
-				android:id="@+id/control_buttons"
-				android:layout_centerHorizontal="true"
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content"
-				android:orientation="horizontal"
-				>
-				
-				<ImageButton
-					android:id="@+id/control_prev"
-					android:src="@android:drawable/ic_media_previous"
-					android:paddingLeft="30dip" android:paddingRight="30dip"
-					android:paddingTop="20dip" android:paddingBottom="20dip"
-					android:background="#00000000"
-					android:layout_width="wrap_content" 
-					android:layout_height="wrap_content"
-					/>
-			
-				<ImageButton
-					android:id="@+id/control_pause"
-					android:src="@android:drawable/ic_media_pause"
-					android:paddingLeft="30dip" android:paddingRight="30dip"
-					android:paddingTop="20dip" android:paddingBottom="20dip"
-					android:background="#00000000"
-					android:layout_width="wrap_content" 
-					android:layout_height="wrap_content"
-					/>
-		
-				<ImageButton
-					android:id="@+id/control_next"
-					android:src="@android:drawable/ic_media_next"
-					android:paddingLeft="30dip" android:paddingRight="30dip"
-					android:paddingTop="20dip" android:paddingBottom="20dip"
-					android:background="#00000000"
-					android:layout_width="wrap_content" 
-					android:layout_height="wrap_content"
-					/>
-		
+			    android:id="@+id/control_buttons"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_centerHorizontal="true"
+			    android:orientation="horizontal"
+			    android:minHeight="72dip" >
+
+			    <ImageButton
+			        android:id="@+id/control_shuffle"
+			        android:layout_width="0dp"
+			        android:layout_height="match_parent"
+			        android:layout_weight="1"
+			        android:background="#00000000"
+			        android:src="@drawable/btn_shuffle_off" />
+
+			    <ImageButton
+			        android:id="@+id/control_prev"
+			        android:layout_width="0dp"
+			        android:layout_height="match_parent"
+			        android:layout_weight="1"
+			        android:background="#00000000"
+			        android:src="@android:drawable/ic_media_previous" />
+
+			    <ImageButton
+			        android:id="@+id/control_pause"
+			        android:layout_width="0dp"
+			        android:layout_height="match_parent"
+			        android:layout_weight="1"
+			        android:background="#00000000"
+			        android:src="@android:drawable/ic_media_pause" />
+
+			    <ImageButton
+			        android:id="@+id/control_next"
+			        android:layout_width="0dp"
+			        android:layout_height="match_parent"
+			        android:layout_weight="1"
+			        android:background="#00000000"
+			        android:src="@android:drawable/ic_media_next" />
+
+			    <ImageButton
+			        android:id="@+id/control_repeat"
+			        android:layout_width="0dp"
+			        android:layout_height="match_parent"
+			        android:layout_weight="1"
+			        android:background="#00000000"
+			        android:src="@drawable/btn_repeat_off" />
 			</LinearLayout>
 		
 		</RelativeLayout>
