--- a/res/layout/gen_list_fast.xml
+++ b/res/layout/gen_list_fast.xml
@@ -31,11 +31,11 @@
 	android:orientation="vertical"
 	>
 	
-	<org.tunesremote.FastScrollView
+	<!-- <org.tunesremote.FastScrollView
 		android:id="@+id/fastscroll"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		>
+		> -->
 		
 		<ListView
 			android:id="@android:id/list"
@@ -43,7 +43,7 @@
 			android:layout_height="fill_parent"
 			/>
 		
-	</org.tunesremote.FastScrollView>
+	<!-- </org.tunesremote.FastScrollView> -->
             
 	<TextView
 		android:id="@android:id/empty"
