--- a/res/menu/act_library.xml
+++ b/res/menu/act_library.xml
@@ -13,6 +13,7 @@
     </item>
     <item
         android:id="@+id/menu_library_forget"
+		android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/library_menu_forget">
     </item>
 
