- updated play/prev/next buttons - higher album art quality (dependent on device) - ArtistsActivity now shows loading animation (rather than "No artists") when loading - Potential fix for special characters in Artist names (Issue #14; please test on 2.0), including java.text.Normalizer backport - improved album track listing

--- a/res/layout/gen_list.xml
+++ b/res/layout/gen_list.xml
@@ -46,4 +46,20 @@
 		android:text=""
 		/>
 
+	<FrameLayout
+	    android:id="@+id/loading_frame"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:background="@android:color/black"
+	    android:visibility="gone" >
+
+		<ProgressBar
+		    android:id="@+id/progressBar1"
+		    style="?android:attr/progressBarStyleLarge"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center" />
+
+	</FrameLayout>
+
 </RelativeLayout>
