--- a/res/layout/act_control.xml
+++ b/res/layout/act_control.xml
@@ -149,7 +149,7 @@
 			        android:layout_height="match_parent"
 			        android:layout_weight="1"
 			        android:background="#00000000"
-			        android:src="@android:drawable/ic_media_previous" />
+			        android:src="@drawable/btn_prev" />
 
 			    <ImageButton
 			        android:id="@+id/control_pause"
@@ -157,7 +157,7 @@
 			        android:layout_height="match_parent"
 			        android:layout_weight="1"
 			        android:background="#00000000"
-			        android:src="@android:drawable/ic_media_pause" />
+			        android:src="@drawable/btn_pause" />
 
 			    <ImageButton
 			        android:id="@+id/control_next"
@@ -165,7 +165,7 @@
 			        android:layout_height="match_parent"
 			        android:layout_weight="1"
 			        android:background="#00000000"
-			        android:src="@android:drawable/ic_media_next" />
+			        android:src="@drawable/btn_next" />
 
 			    <ImageButton
 			        android:id="@+id/control_repeat"
@@ -201,7 +201,6 @@
                android:id="@+id/rating_bar"
                android:numStars="5"
                android:stepSize="0.5"
-               android:layout_above="@id/control_box"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"/>
         
