--- a/res/menu/act_control.xml
+++ b/res/menu/act_control.xml
@@ -2,50 +2,47 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/control_menu_search"
-        android:icon="@android:drawable/ic_menu_search"
-        android:title="@string/control_menu_search">
+            android:id="@+id/control_menu_artists"
+            android:icon="@drawable/ic_menu_library"
+            android:title="@string/control_menu_library" android:showAsAction="ifRoom|withText">
     </item>
     <item
-        android:id="@+id/control_menu_artists"
-        android:icon="@drawable/ic_search_category_music_artist"
-        android:title="@string/control_menu_artists">
-    </item><item android:id="@+id/control_menu_album" android:icon="@drawable/ic_search_category_music_album" android:title="@string/control_menu_albums"></item>
-    <item
-        android:id="@+id/control_menu_playlists"
-        android:icon="@drawable/ic_search_category_music_song"
-        android:title="@string/control_menu_playlists">
+            android:id="@+id/control_menu_speakers"
+            android:icon="@android:drawable/ic_lock_silent_mode_off"
+            android:title="@string/control_menu_speakers"
+            android:visible="false">
     </item>
     <item
-        android:id="@+id/control_menu_speakers"
-        android:icon="@android:drawable/ic_lock_silent_mode_off"
-        android:title="@string/control_menu_speakers"
-        android:visible="false">
+            android:id="@+id/control_menu_add_library"
+            android:icon="@android:drawable/ic_menu_add"
+            android:title="@string/control_menu_addlibrary">
     </item>
     <item
-        android:id="@+id/control_menu_add_library"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/control_menu_addlibrary">
+            android:id="@+id/control_menu_pick_library"
+            android:icon="@android:drawable/ic_menu_share"
+            android:title="@string/control_menu_picklibrary">
     </item>
     <item
-        android:id="@+id/control_menu_pick_library"
-        android:icon="@android:drawable/ic_menu_share"
-        android:title="@string/control_menu_picklibrary">
+            android:id="@+id/control_menu_now_playing"
+            android:title="@string/control_menu_nowplaying"
+            android:icon="@drawable/ic_menu_playing"
+            android:showAsAction="ifRoom|withText">
     </item>
     <item
-        android:id="@+id/control_menu_now_playing"
-        android:title="@string/control_menu_nowplaying">
+            android:id="@+id/control_menu_search"
+            android:icon="@android:drawable/ic_menu_search"
+            android:title="@string/control_menu_search"
+            android:showAsAction="ifRoom" />
+    <item
+            android:id="@+id/control_menu_settings"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/control_menu_settings">
     </item>
     <item
-        android:id="@+id/control_menu_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/control_menu_settings">
+            android:id="@+id/control_menu_about"
+            android:icon="@android:drawable/ic_menu_info_details"
+            android:title="@string/control_menu_about">
     </item>
-    <item
-        android:id="@+id/control_menu_about"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:title="@string/control_menu_about">
-    </item>
-    
+
 
 </menu>
