--- a/res/drawable/btn_pause.xml
+++ b/res/drawable/btn_pause.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+          android:exitFadeDuration="@android:integer/config_mediumAnimTime">
     <item android:drawable="@drawable/ic_tunes_pause_pressed" android:state_pressed="true" />
     <item android:drawable="@drawable/ic_tunes_pause" />
 </selector>
