--- a/res/layout/item_speaker.xml
+++ b/res/layout/item_speaker.xml
@@ -34,13 +34,13 @@
 		android:orientation="vertical">
 		<TextView android:id="@+id/speakerNameTextView"
 			android:paddingLeft="10dip" android:singleLine="true" android:text="Speaker Name"
-			android:textColor="@android:color/primary_text_light"
+			android:textColor="@android:color/white"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:textStyle="bold" />
 		<TextView android:id="@+id/speakerTypeTextView"
 			android:paddingLeft="10dip" android:singleLine="true" android:text="Speaker Type"
-			android:textColor="@android:color/primary_text_light"
+			android:textColor="@android:color/white"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceSmall" />
 		<SeekBar android:id="@+id/speakerVolumeBar" android:max="100"
